Special Product , Best Product , Best Deals , Layout Fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">MebelCart</string>
     <string name="discoverQuality">Discover Quality With Ease\nYour Ultimate Online Furniture Shopping App!</string>
-    <string name="welcome">Welcome to the future of furniture shopping!\nOur app makes it easy to find and order high-quality pieces for your home.\nCreating your ideal space is just a tap away.\nDiscover convenience, style, and comfort all in one place.</string>
+    <string name="welcome">Welcome to the future of furniture shopping!\nOur app makes it easy to find and order high-quality pieces for your home.</string>
 </resources>
